--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -12,7 +12,7 @@
     <section class="about-section1-container">
         <div class="about-section1-main">
             <h1 style="font-family: Poppins;">Online Gaming Provider</h1>
-            <div class="about_map">
+            <!-- <div class="about_map">
                 <div class="map">
                     <ul class="map__markers">
                         <li class="map__marker map__marker--chicago"> <a href="#">India</a>
@@ -47,9 +47,9 @@
                         </li>
                     </ul> <img src="assets/vrnl-market_2022-1-768x369 2.webp" alt="map" />
                 </div>
-            </div>
+            </div> -->
         </div>
-        <div class="about-section1-adddress">
+        <!-- <div class="about-section1-adddress">
             <div class="about-section1-add1">
                 <h3><strong> Vrnl's USA</strong></h3>
                 <p class="para1">46 Country Club, Bellport</p>
@@ -60,7 +60,7 @@
                 <p class="para1">Calle Coronel Inclan, 237</p>
                 <p class="para1">Oficina 703 Miraflores – Lima – Perú</p>
             </div>
-        </div>
+        </div> -->
         <div class="about-section1-para">
             <p style="margin-bottom: 20px" style="color: #686868;"> <strong style="color: #000;"> Vrnl is a
                     well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the
@@ -90,7 +90,7 @@
                 <div class="col-lg-8 content-2 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500"
                     data-aos-delay="000">
                     <p style="color: #686868;">VRNL is The Biggest Platform For Providing Online sports and Casino
-                        Betting whitelable .We offer exch API along with our custom site services for India and
+                        Betting whitelable .We offer exch API along with our custom site services for 
                         Bangladesh with low margins and on a reliable platform, which include casino. We provide APIs
                         for all leagues in exchanges, along with online streaming services. Enjoy betting with reliable
                         platform. Enjoy over 1000 slot games and table games on our site.</p>
@@ -120,7 +120,7 @@
                     possibilities. Vrnl is proud to have partnered with the industry’s most distinctive names across
                     games software providers and payment solutions. Share our platform for success and add your name to
                     this growing list.</p>
-                <div class="partners_logo_sec partners_logo_sec_desk aos-init aos-animate" data-aos="fade-up"
+                <!-- <div class="partners_logo_sec partners_logo_sec_desk aos-init aos-animate" data-aos="fade-up"
                     data-aos-duration="1500" data-aos-delay="000">
                     <div class="partners_logo_box"> <a href="https://velkii365.com/#/home" target="_blank"> <img
                                 src="assets/partner-logo-new/velkii365.webp" alt="velkii365"
@@ -176,8 +176,10 @@
                     <div class="partners_logo_box"> <a href="https://www.3wickets.io/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/wicket3.webp" alt="wicket3"
                                 class="img-fluid partner-image copy"> </a> </div>
-                </div> <!-- for mobile view -->
-                <div class="partners_logo_sec partners_logo_sec_mob aos-init aos-animate" data-aos="fade-up"
+                </div>  -->
+                
+                <!-- for mobile view -->
+                <!-- <div class="partners_logo_sec partners_logo_sec_mob aos-init aos-animate" data-aos="fade-up"
                     data-aos-duration="1500" data-aos-delay="000">
                     <div class="partners_logo_box"> <a class="box" href="https://velkii365.com/#/home" target="_blank">
                             <img src="assets/partner-logo-new/velkii365.webp" alt="velkii365"
@@ -241,7 +243,7 @@
                             class="box" href=" https://www.bazi365.live/#/dash" target="_blank"> <img
                                 src="assets/partner-logo-new/bazi365.webp" alt="bazi365"
                                 class="img-fluid partner-image copy"> </a> </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
