--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,15 @@
 	</button>
 	<div class="side-slider-content">
 		<ul id="side-cs-cont" class="contact-service-list">
-			<li id="cs-145" class="icon-fb">
+
+			<li id="cs-81" class="icon-mail">
+				<a target="_blank" href="https://t.me/vrnlnet">
+					<img src="assets\icons8-telegram.gif" ui-key="realIconPath" alt="Visit our telegram page">
+					<span ui-key="displayText">Telegram</span></a><hr>
+			</li>
+
+			
+			<!-- <li id="cs-145" class="icon-fb">
 				<a target="_blank" href="https://www.facebook.com/profile.php?id=61578898121804">
 					<img  src="assets/icons8-facebook.gif" alt="Visit our Facebook page">
 
@@ -18,22 +26,13 @@
 					<img src="assets\icons8-instagram.gif"alt="Visit our instagram page">
 					<span ui-key="displayText">Instagram</span></a><hr>
 			</li>
-			<li id="cs-81" class="icon-mail">
-				<a target="_blank" href="https://t.me/vrnlnet">
-					<img src="assets\icons8-telegram.gif" ui-key="realIconPath" alt="Visit our telegram page">
-					<span ui-key="displayText">Telegram</span></a><hr>
-			</li>
+			
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank" href="https://twitter.com/VRNLOFFICIAL">
 					<img src="assets/icons8-twitter-circled.gif" ui-key="realIconPath" alt="Visit our twitter page">
 					<span ui-key="displayText">Twitter</span></a><hr>
 			</li>
-			<!-- <li id="cs-81" class="icon-mail">
-				<a target="_blank" href="skype:live:.cid.2d0bfe0a892473db?chat">
-					<img src="assets\icons8-skype.gif" ui-key="realIconPath" alt="Visit our skype page">
-					<span ui-key="displayText">skype</span></a>
-					<hr>
-			</li> -->
+		
 			<li id="cs-81" class="icon-mail">
 				<a target="_blank"
 					href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0" >
@@ -45,7 +44,7 @@
 					href="mailto:vrnl.net.info@gmail.com" >
 					<img src="assets/mail.gif" ui-key="realIconPath" alt="Visit our whatsapp page">
 					<span ui-key="displayText">Mail</span></a><hr>
-			</li>
+			</li> -->
 		</ul>
 	</div>
 </div>
