--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -17,7 +17,7 @@
   <section class="contact-section1-container">
     <div class="contact-section1-main">
         <h1>Online Gaming Provider</h1>
-        <div class="contact-section1-img">  <div class="about_map">
+        <!-- <div class="contact-section1-img">  <div class="about_map">
           <div class="map">
   
       
@@ -78,7 +78,7 @@
           
               </div>
        
-        </div> </div>
+        </div> </div> -->
     </div>
 
 
