--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -8,7 +8,13 @@
         <p class="para_faq">We have answers (Well, most of the times!)</p>
         <p class="freq_param">
           Below you'll find answer to the most common question please check out
-          our <strong> <a style="color: #25d366;"
+          our <strong>
+               <a style="color: #2299d4;"
+              href="https://t.me/vrnlnet"
+              target="_blank"> Telegram</a> 
+            
+            
+            <!-- <a style="color: #25d366;"
               href="https://api.whatsapp.com/send/?phone=%2B918268808222&text&type=phone_number&app_absent=0"
               target="_blank"> Whatsapp</a> <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #eedd44);
               -webkit-text-fill-color: transparent;
@@ -17,20 +23,16 @@
               <a style="color: #1a0dab;"
               href="https://www.facebook.com/profile.php?id=61578898121804"
               target="_blank"> Facebook</a> 
-                <a style="color: #2299d4;"
-              href="https://t.me/vrnlnet"
-              target="_blank"> Telegram</a> 
-
+            
               <a style="background: linear-gradient(to right, #f32170, #ff6b08, #cf23cf, #2299d4);
               -webkit-text-fill-color: transparent;
               -webkit-background-clip: text;"  target="_blank"
    href="mailto:vrnl.net.info@gmail.com">
    Email
-</a>
+</a> -->
 
               
-              <!-- <a style="color: #00aff0;"
-              href="skype:live:.cid.2d0bfe0a892473db?chat"> Skype</a>  -->
+         
               .</strong> If you still
           can't find the answer you're looking for, just
           <b routerLink="/contact">Contact us ! </b>
