--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,6 +1,6 @@
 <section class=comp_sol>
   <div class=comp_details>
-  <div class=comp_row>
+  <!-- <div class=comp_row>
   <div class=comp_col>
   <a target=_blank href="https://www.gamblingcommission.gov.uk">
   <img src="assets/gamblingcomm.webp" loading=lazy alt=gamblingcomm style=width:88px;margin-left:5px width=88 height=88>
@@ -11,8 +11,8 @@
   <img class=comp_1 width=88 height=88 src="assets/gordonmoody.webp" loading=lazy alt=gordonmoody style=width:88px;margin-left:8px>
   </a>
   </div>
-  </div>
-  <div class="comp_row seconcomp_row">
+  </div> -->
+  <!-- <div class="comp_row seconcomp_row">
   <div class=comp_col>
   <a target=_blank href="https://www.begambleaware.org/" >
   <img class=comp_2 src="assets/betblocker.webp" loading=lazy alt=betblocker style=width:88px width=88 height=83>
@@ -23,7 +23,7 @@
   <img class="comp_3 secondcomp_col_1" src="assets/gamecare.webp" loading=lazy alt=gamecare width=86 height=96 style=width:88px;margin-left:67px>
   </a>
   </div>
-  </div>
+  </div> -->
   <div class="company_about com">
   <h2 class=comp_header>Company</h2>
   <div>
