--- a/src/app/footers2/footers2.component.html
+++ b/src/app/footers2/footers2.component.html
@@ -1,4 +1,4 @@
-<section class="footer_sec_2">
+<!-- <section class="footer_sec_2">
     <div class="container_footer">
         <div class="footer_row">
             <div class="footer_col">
@@ -29,7 +29,7 @@
         </div>
     </div>
 
-</section>
+</section> -->
 
 <section class="social_sec">
     <div class="social_icons">
