--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -4,7 +4,7 @@
         <section class=typing-container>
             <h1 class=home_header_h1>Sports betting software White Label <span class=typing-text></span></h1>
         </section>
-        <p class=param>A company that consistently pursues innovative solutions to meet its business needs</p>
+        <p class=param>A company committed to continuously pursuing innovative solutions to effectively address its evolving business needs.</p>
     </div>
 </section>
 <div class=containt3>
