--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -16,7 +16,7 @@
 
   <section class="contact-section1-container">
     <div class="contact-section1-main">
-        <h1>Online Gaming Provider</h1>
+        <!-- <h1>Online Gaming Provider</h1> -->
         <!-- <div class="contact-section1-img">  <div class="about_map">
           <div class="map">
   
@@ -83,11 +83,11 @@
 
 
     <div class="contact-section1-para">
-    <p style="margin-bottom:20px ;"> <strong style="color: #000;">
+    <!-- <p style="margin-bottom:20px ;"> <strong style="color: #000;">
       Vrnl is a well-established Sportsbook and Gaming Provider with a remarkable 10-year track record in the betting industry.
     </strong>
     Since 2012, we have been dedicated to supplying bookmakers, lotteries, and betting organizations in regulated markets.
-  </p>
+  </p> -->
   <p>&nbsp;</p>
 
   <p style="margin-bottom: 20px">
