--- a/src/app/faq/faq.component.html
+++ b/src/app/faq/faq.component.html
@@ -227,7 +227,7 @@ Online player, register your game account online or at a shop, place bets.
                     </div>
 
                     
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h2 class="accordion-header" id="headingThirteen">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThirteen" aria-expanded="false" aria-controls="collapseThirteen">
                           Can I use my logo and brand colors?                     </button>
@@ -240,7 +240,7 @@ Online player, register your game account online or at a shop, place bets.
 
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingFourteen">
@@ -257,7 +257,7 @@ Online player, register your game account online or at a shop, place bets.
                       </div>
                     </div>
 
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h2 class="accordion-header" id="headingFifteen">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFifteen" aria-expanded="false" aria-controls="collapseFifteen">
                           I would like to have a fully customized solution, is it possible?                    </button>
@@ -270,9 +270,9 @@ Online player, register your game account online or at a shop, place bets.
 
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
-                    <div class="accordion-item">
+                    <!-- <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSixteen">
                         <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSixteen" aria-expanded="false" aria-controls="collapseSixteen">
                           How do I change my current software provider?                    </button>
@@ -285,7 +285,7 @@ Online player, register your game account online or at a shop, place bets.
 
                         </div>
                       </div>
-                    </div>
+                    </div> -->
 
                     <div class="accordion-item">
                       <h2 class="accordion-header" id="headingSeventeen">
