--- a/src/app/live-casino/live-casino.component.html
+++ b/src/app/live-casino/live-casino.component.html
@@ -24,8 +24,8 @@
                 <p class="index2-col-para3"><b>We've developed various secure integration methods, all of which are
                         user-friendly and designed for easy implementation with our live casino API.</b></p>
                 <h3 class="demo-live"><strong> Demo live casino solutions</strong></h3> <a class="demo-link"
-                    href="https://gullybet.vrnlexch.com/#/home/hot" target="_blank">
-                    <p> https://gullybet.vrnlexch.com/#/home/hot</p>
+                    href="https://baji.vrnlexch.com/#/" target="_blank">
+                    <p> https://baji.vrnlexch.com/#/</p>
                 </a>
             </div>
             <div class="index2-col2">
@@ -36,7 +36,7 @@
     </section>
     <section class="container7">
         <div class="container7-row">
-            <div class="container7-col1"> <img class="container_images_b" src="assets/vrnl image 8_11zon.webp"
+            <div class="container7-col1"> <img class="container_images_b" src="assets/vrnl_iframe.webp"
                     loading="lazy" alt="live casino software"> </div>
             <div class="container7-col2">
                 <h2><strong style="color: #575756;">live casino API</strong> integrations</h2>
