--- a/src/app/online-sportsbook/online-sportsbook.component.html
+++ b/src/app/online-sportsbook/online-sportsbook.component.html
@@ -26,8 +26,8 @@
                 <h2 class="onther_head">We simplify the process for you to seamlessly integrate into the business.</h2>
                 <p class="onther_p1">This theme is highly customizable, and you can experience its flexibility in
                     action:</p>
-                <p class="onther_a"><a href=" https://www.lc247.live/#/dash " target="_blank" class="lc247"><strong>
-                    https://www.lc247.live/#/dash </strong></a></p>
+                <p class="onther_a"><a href=" https://skyexch.vrnlexch.com/#/dash" target="_blank" class="lc247"><strong>
+                    https://skyexch.vrnlexch.com/#/dash </strong></a></p>
             </div>
             <div class="onther_btn"><button class="hover-1_1 otn_s_1 button_slide slide_right" routerLink="/contact"><i
                         class="fa-solid fa-phone"></i> Contact us!</button> </div>
