--- a/src/app/risk-management/risk-management.component.html
+++ b/src/app/risk-management/risk-management.component.html
@@ -1,1 +1,66 @@
-<app-header></app-header><section id="animate-area" class="animated-background"> <div class="main_sec"> <section class="typing-container"> <h1 class="home_header_h1 headerh1"> Your Bets, Our Responsibility Unbeatable Risk Management Uncompromising Protection for <span class="typing-text"></span> </h1> </section> <p class="param1"> A company that consistently pursues innovative solutions to meet its business needs. </p> </div> </section> <section class="platform_sec"> <div class="platform_row"> <div class="platform_col"> <h1 class="platform_header">Dedicated Risk Management Team</h1> <p class="platform_para1"> We have a dedicated and highly experienced risk management team that operates 24/7. Their primary role is to monitor every bet and transaction on our platform to ensure fair play and safety for all users. </p> <button class="button_slide slide_right slide_right1" (click)="scrollToContact()" routerLink="/contact"> <i class="fa-solid fa-phone"></i> Contact us! </button> </div> <div class="platform_col_2"> <img class="platform_img ai-img1" src="assets/Risk Management Team2.webp" width="544" height="310" loading="lazy" alt="vrnl"> <div class="platform_you_tube"> <a href="#" aria-label="Youtube" ><img class="you_img" src="assets/play.png.webp" width="520" height="291" loading="lazy" alt="youtube" /></a> </div> </div> </div> </section> <section class="whites_sec"> <div class="whites_row"> <div class="whites_col"> <h2 class="white_header1"> Key Features </h2> <div class="wpb_wrapper"><ul><li><span style="font-weight: 400;"><strong> Real-Time Monitoring:</strong> Our cutting-edge technology and real-time monitoring systems continuously track all activities on our platform. This includes bets, odds changes, and user behavior.</span></li><li><strong>Manual Review:</strong> When alerts are triggered, our risk team conducts a thorough manual review. They analyze betting patterns, odds fluctuations, and account behaviors to determine if further action is needed.</li><li><strong>Risk Mitigation:</strong> If any irregularities or risks are identified, we take immediate action to mitigate those risks. This may involve voiding or suspending bets, freezing accounts, or requesting additional verification from users.</li><li><strong>Data Analysis:</strong> We regularly analyze data to identify trends and patterns that may indicate risks. Historical data is also used to enhance our risk assessment and prevention strategies.</li><li><strong>Incident Response Plan:</strong> We have a comprehensive incident response plan in place to address various types of risks, including security breaches, cheating, or other incidents. This plan outlines procedures for handling such events efficiently.</li></ul></div> <br /> <br /> <div class="white_back"></div> </div> <div class="whites_col_1"> <img class="whites_sec_img2 ai-img2" src="assets/Ai safe bet key features-min.webp" width="543" height="317" loading="lazy" alt="White Label Solutions" /> </div> </div> </section> <section class="gaming_sec"> <div class="gaming_row"> <div class="gaming_col"> <img class="gaming_img ai-img3" src="assets/Ai Benefits-min.webp" width="520" height="325" loading="lazy" alt="iGaming Platform" /> </div> <div class="gaming_col_2"> <h1 class="gaming_header"> Benefits</h1> <div class="wpb_wrapper"><ul><li><span style="font-weight: 400;"><strong>Ongoing Training:</strong> Our risk team receives continuous training to stay updated on the latest threats and best practices in the industry. This ensures they are well-prepared to address any challenges.</span></li><li><strong>Advanced Technology and Security:</strong> We regularly invest in and upgrade our platform's technology and security measures. This includes regular penetration testing, software updates, and security audits.</li><li><strong>Transparency and Communication:</strong> We believe in maintaining open and transparent communication with our users. Any actions taken as part of risk management are communicated clearly to build trust and confidence.</li><li><strong>Continuous Improvement:</strong> Our risk management system is continuously evolving. We learn from past incidents and emerging threats to evaluate and improve our strategies. By following these meticulous steps, we are committed to providing a safe, secure, and fair environment for all our users. Our priority is to ensure the integrity of our platform and to protect user interests.</li><!-- <li><strong>Customer Trust:</strong> Build and maintain customer trust by ensuring a fair and transparent betting environment.</li> --></ul></div> <br /> <br /> <div class="white_back"></div> </div> </div> </section> <app-footer></app-footer>
+<app-header></app-header>
+<section id="animate-area" class="animated-background">
+    <div class="main_sec">
+        <section class="typing-container">
+            <h1 class="home_header_h1 headerh1"> Your Bets, Our Responsibility Unmatched Risk Management & <span class="typing-text"></span> </h1>
+        </section>
+        <p class="param1"> A company that consistently pursues innovative solutions to meet its business needs. </p>
+    </div>
+</section>
+<section class="platform_sec">
+    <div class="platform_row">
+        <div class="platform_col">
+            <h1 class="platform_header">Dedicated Risk Management Team</h1>
+            <p class="platform_para1"> We have a dedicated and <b> highly experienced risk management team </b> that operates
+                <b>24/7.</b> Their primary role is to monitor every bet and transaction on our platform to ensure <b>fair play</b> and
+                <b>safety</b> for all users. </p> <button class="button_slide slide_right slide_right1"
+                (click)="scrollToContact()" routerLink="/contact"> <i class="fa-solid fa-phone"></i> Contact us!
+            </button>
+        </div>
+        <div class="platform_col_2"> <img class="platform_img ai-img1" src="assets/Risk Management Team2.webp"
+                width="544" height="310" loading="lazy" alt="vrnl">
+            <div class="platform_you_tube"> <a href="#" aria-label="Youtube"><img class="you_img"
+                        src="assets/play.png.webp" width="520" height="291" loading="lazy" alt="youtube" /></a> </div>
+        </div>
+    </div>
+</section>
+<section class="whites_sec">
+    <div class="whites_row">
+        <div class="whites_col">
+            <h2 class="white_header1"> Key Features </h2>
+            <div class="wpb_wrapper">
+                <ul>
+                    <li><span style="font-weight: 400;"><strong> Real-Time Monitoring:</strong>  Advanced systems track bets, odds changes, and user activity continuously.</span></li>
+                    <li><strong>Manual Review:</strong>  Alerts trigger in-depth checks of betting patterns, odds shifts, and account behavior.</li>
+                    <li><strong>Risk Mitigation:</strong>Immediate actions like voiding/suspending bets, freezing accounts, or verifying users if irregularities are found.</li>
+                    <li><strong>Data Analysis:</strong> Ongoing review of live and historical data to detect risk trends and improve prevention strategies.</li>
+                    <li><strong>Incident Response:</strong> A structured plan to handle security breaches, cheating, or other threats quickly and effectively.
+
+</li>
+                </ul>
+            </div> <br /> <br />
+            <div class="white_back"></div>
+        </div>
+        <div class="whites_col_1"> <img class="whites_sec_img2 ai-img2" src="assets/Ai safe bet key features-min.webp"
+                width="543" height="317" loading="lazy" alt="White Label Solutions" /> </div>
+    </div>
+</section>
+<section class="gaming_sec">
+    <div class="gaming_row">
+        <div class="gaming_col"> <img class="gaming_img ai-img3" src="assets/Ai Benefits-min.webp" width="520"
+                height="325" loading="lazy" alt="iGaming Platform" /> </div>
+        <div class="gaming_col_2">
+            <h1 class="gaming_header"> Benefits</h1>
+            <div class="wpb_wrapper">
+                <ul>
+                    <li><span style="font-weight: 400;"><strong>Ongoing Training:</strong>  Continuous skill development for the risk team to handle new threats effectively.</span></li>
+                    <li><strong>Advanced Technology and Security:</strong> Regular upgrades, penetration testing, software updates, and security audits.</li>
+                    <li><strong>Transparency:</strong>  Clear communication with users about risk management actions to maintain trust.</li>
+                    <li><strong>Continuous Improvement:</strong> Evolving strategies based on past incidents and emerging risks to protect platform integrity and user interests.</li>
+                    <!-- <li><strong>Customer Trust:</strong> Build and maintain customer trust by ensuring a fair and transparent betting environment.</li> -->
+                </ul>
+            </div> <br /> <br />
+            <div class="white_back"></div>
+        </div>
+    </div>
+</section> <app-footer></app-footer>
