--- a/src/app/casino-games/casino-games.component.html
+++ b/src/app/casino-games/casino-games.component.html
@@ -1,1 +1,108 @@
-<app-header2></app-header2><section> <div class="container9"> <div class="left-text-index3"> <h2 style="font-weight: bold;">Why choose our platform?</h2> <h1 class="left-index3-h1">The world's most extensive catalog of <b style="font-family: 'Raleway', sans-serif; font-size: 40px; font-weight: bold;">online casino games</b></h1> <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b> is your ultimate destination, providing you with an unmatched assortment of over 3000+ thrilling casino games and slots. We pride ourselves on offering the most comprehensive range of online casino games available on the internet.<br><br></p> <p class="left-text-index3-bold" ><b>We cater to online gaming operators, bookmakers, lotteries, and betting organizations operating in regulated markets. </b> <br><br></p> <p class="left-text-index3-paras">We understand the importance of secure and fair gameplay in the world of online casinos. That's why our gaming mathematics are not only robust but also certified by independent gaming laboratories. This certification guarantees the utmost level of user experience for your players, making their online casino gaming experience truly top-notch.<br><br></p> <blockquote class="x-quote e250-e7 m6y-1g"><div class="x-quote-content"><div class="x-quote-text"><table> <tbody> <tr> <td colspan="2"> <h5 style="font-size: 24px; font-size: 'Raleway', sans-serif !important;" ><b class="heading-casino">CASINO NUMBERS</b></h5> </td> </tr> <tr> <td> <p><span style="font-weight: 400;">Slot machine</span></p> </td> <td> <p><span style="font-weight: 400;">More than de 10</span><span style="font-weight: 400;">.000</span></p> </td> </tr> <tr> <td> <p><span style="font-weight: 400;">Table Games</span></p> </td> <td> <p><span style="font-weight: 400;">More than de 4</span><span style="font-weight: 400;">40</span></p> </td> </tr> <tr> <td> <p><span style="font-weight: 400;">Video poker</span></p> </td> <td> <p><span style="font-weight: 400;">More than </span><span style="font-weight: 400; font-family: 'Raleway', sans-serif;">de 3</span><span style="font-weight: 400;">25</span></p> </td> </tr> <tr> <td> <p><span style="font-weight: 400;">Lottery</span></p> </td> <td> <p><span style="font-weight: 400;">More than de 9</span><span style="font-weight: 400;">0</span></p> </td> </tr> <tr> <td> <p><span style="font-weight: 400;">PROVEEDORES</span></p> </td> <td><span style="font-weight: 400;">More than de 12</span><span style="font-weight: 400;">0</span></td> </tr> </tbody> </table></div></div></blockquote> </div> <div class="right-img-index3"> <img src="assets/vrnl image 10_11zon.webp" alt="our Platform"> </div> </div> </section><!-- ===================================================================== --><section class="container10"> <div class="index3-main-div"> <div class="index3-left-img"> <img class="container_10_img" src="assets/VRNL 3_11zon.webp" alt="casino software"> </div> <div class="index3-right-text"> <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino Solutions<br></h1> <li><strong>Casino White Label Solution</strong></li> <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white-label solution. Customize your casino, offer a wide game selection, ensure security, and start generating revenue swiftly.</p> <li><strong> Website Branding</strong> </li> <p style="margin-left: 24px;">Elevate your online presence with VRNL's expert website branding services. We design, create, and transform websites to reflect your unique identity, leaving a lasting impression.</p> <li><strong> Tools (training)</strong></li> <p style="margin-left: 24px;">Unlock your potential in the world of trading with VRNL's powerful trading tools. Our cutting-edge solutions empower you with the insights and technology to make informed decisions and maximize your trading success.</p> <li><strong>Client Support</strong></li> <p style="margin-left: 24px;">Enhance your client experience with VRNL's exceptional client support services. Our dedicated team is here to provide expert assistance, ensuring your client's' needs are met with efficiency and care.</p> </div> </div> </section> <app-footers2></app-footers2>
+<app-header2></app-header2>
+<section>
+    <div class="container9">
+        <div class="left-text-index3">
+            <h2 style="font-weight: bold;">Why choose our platform?</h2>
+            <h1 class="left-index3-h1">The world's most extensive catalog of <b
+                    style="font-family: 'Raleway', sans-serif; font-size: 40px; font-weight: bold;">online casino
+                    games</b></h1>
+            <p class="left-text-index3-paras"> Our <b style="color: #575756;"> White Label </b> is your ultimate
+                destination, providing you with an unmatched assortment of over 3000+ thrilling casino games and slots.
+                We pride ourselves on offering the most comprehensive range of online casino games available on the
+                internet.<br><br></p>
+            <p class="left-text-index3-bold"><b>We cater to online gaming operators, bookmakers, lotteries, and betting
+                    organizations operating in regulated markets. </b> <br><br></p>
+            <p class="left-text-index3-paras">We understand the importance of secure and fair gameplay in the world of
+                online casinos. That's why our gaming mathematics are not only robust but also certified by independent
+                gaming laboratories. This certification guarantees the utmost level of user experience for your players,
+                making their online casino gaming experience truly top-notch.<br><br></p>
+            <blockquote class="x-quote e250-e7 m6y-1g">
+                <div class="x-quote-content">
+                    <div class="x-quote-text">
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td colspan="2">
+                                        <h5 style="font-size: 24px; font-size: 'Raleway', sans-serif !important;"><b
+                                                class="heading-casino">CASINO NUMBERS</b></h5>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><span style="font-weight: 400;">Slot machine</span></p>
+                                    </td>
+                                    <td>
+                                        <p><span style="font-weight: 400;">More than de 10</span><span
+                                                style="font-weight: 400;">.000</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><span style="font-weight: 400;">Table Games</span></p>
+                                    </td>
+                                    <td>
+                                        <p><span style="font-weight: 400;">More than de 4</span><span
+                                                style="font-weight: 400;">40</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><span style="font-weight: 400;">Video poker</span></p>
+                                    </td>
+                                    <td>
+                                        <p><span style="font-weight: 400;">More than </span><span
+                                                style="font-weight: 400; font-family: 'Raleway', sans-serif;">de
+                                                3</span><span style="font-weight: 400;">25</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><span style="font-weight: 400;">Lottery</span></p>
+                                    </td>
+                                    <td>
+                                        <p><span style="font-weight: 400;">More than de 9</span><span
+                                                style="font-weight: 400;">0</span></p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <p><span style="font-weight: 400;">PROVEEDORES</span></p>
+                                    </td>
+                                    <td><span style="font-weight: 400;">More than de 12</span><span
+                                            style="font-weight: 400;">0</span></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </blockquote>
+        </div>
+        <div class="right-img-index3"> <img src="assets/vrnl image 10_11zon.webp" alt="our Platform"> </div>
+    </div>
+</section><!-- ===================================================================== -->
+<section class="container10">
+    <div class="index3-main-div">
+        <div class="index3-left-img"> <img class="container_10_img" src="assets/vrnl_iframe.webp"
+                alt="casino software"> </div>
+        <div class="index3-right-text">
+            <h1 class="left-index3-h1" style="font-weight: bold; color: #a0c528;">We Provide Online Turnkey Casino
+                Solutions<br></h1>
+            <li><strong>Casino White Label Solution</strong></li>
+            <p style="margin-left: 24px;">Launch your own branded casino with ease using VRNL's white-label solution.
+                Customize your casino, offer a wide game selection, ensure security, and start generating revenue
+                swiftly.</p>
+            <li><strong> Website Branding</strong> </li>
+            <p style="margin-left: 24px;">Elevate your online presence with VRNL's expert website branding services. We
+                design, create, and transform websites to reflect your unique identity, leaving a lasting impression.
+            </p>
+            <li><strong> Tools (training)</strong></li>
+            <p style="margin-left: 24px;">Unlock your potential in the world of trading with VRNL's powerful trading
+                tools. Our cutting-edge solutions empower you with the insights and technology to make informed
+                decisions and maximize your trading success.</p>
+            <li><strong>Client Support</strong></li>
+            <p style="margin-left: 24px;">Enhance your client experience with VRNL's exceptional client support
+                services. Our dedicated team is here to provide expert assistance, ensuring your client's' needs are met
+                with efficiency and care.</p>
+        </div>
+    </div>
+</section> <app-footers2></app-footers2>
