--- a/src/app/main-sec/main-sec.component.html
+++ b/src/app/main-sec/main-sec.component.html
@@ -4,8 +4,31 @@
         <section class=typing-container>
             <h1 class=home_header_h1>Sports betting software White Label <span class=typing-text></span></h1>
         </section>
-        <p class=param>A company committed to continuously pursuing innovative solutions to effectively address its evolving business needs.</p>
+        <p class=param>A company that consistently pursues innovative solutions to meet its business needs.</p>
+
+
+               
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+            
+
     </div>
+
+
 </section>
 <div class=containt3>
     <section class=platform_sec>
@@ -13,20 +36,28 @@
             <div class=platform_col>
                 <h2 class=platform_header><i class="fa-regular fa-hand-point-right fa-fade fa-2xs"
                         style=color:#ec0200;padding-top:15px></i><a href="https://vrnlexch.com/" target=_blank
-                        class="gradient-text blink-soft"> Sports Betting Software Solutions</a></h2>
-                <p class=platform_para>Sport Betting software solutions have redefined the sports betting experience.
-                    Their user-friendly interface, advanced analytics, and live betting options make them a go-to choice
-                    for both novice and experienced bettors. With the convenience and excitement they bring, it's no
-                    wonder that these solutions are revolutionizing the industry. </p>
-                <p class=platform_para>Now that you're well-versed with Sports Betting software solutions, you can
-                    embark on your betting journey with confidence. Make the most out of this technology at your
-                    disposal and enjoy the thrill of sports betting like never before. The following options are at your
-                    disposal: Online and Retail Sports Betting software, B2C, Casino and White Label solutions.</p>
-                <h3 class=header_plat>Try our B2B Betting software</h3><a class=platform_anchor
+                        class="gradient-text blink-soft"> Transform Your Experience with Advanced Sports Betting
+                        Software Solutions</a></h2>
+                <p class=platform_para>Modern sports betting software solutions are <b>transforming</b> how bettors
+                    engage with the game. Featuring <b> seamless interfaces,</b> real-time analytics, and live wagering
+                    capabilities, these platforms deliver a superior betting experience for both newcomers and seasoned
+                    players alike.</p>
+                <p class=platform_para style="    margin-bottom: 42px;">Whether you're operating an online sportsbook, a
+                    retail betting outlet, or a
+                    casino, our comprehensive suite of solutions—including <b>B2C platforms</b> and <b> customizable
+                        white-label
+                        products</b> provides the flexibility and technology needed to stay competitive. Embrace
+                    innovation and
+                    elevate your sports betting operations with software designed to <b>optimize performance</b> and
+                    <b>user
+                        satisfaction</b>.
+
+                </p>
+                <h3 class=header_plat>Explore our advanced B2B Betting software</h3><a class=platform_anchor
                     href="https://skyexch.vrnlexch.com/ " target=_blank>
                     <p> https://skyexch.vrnlexch.com/ </p>
                 </a>
-                <h3 class=header_plat>Try our B2C Betting software</h3><a class=platform_anchor
+                <h3 class=header_plat>Explore our advanced B2C Betting software</h3><a class=platform_anchor
                     href="https://mostvipgame.vrnlexch.com/m/" target=_blank>
                     <p>https://mostvipgame.vrnlexch.com/m/</p>
                 </a><br><button class="button_slide slide_right" (click)=scrollToContact() routerLink="/contact"><i
@@ -44,19 +75,28 @@
     <section class=whites_sec>
         <div class=whites_row>
             <div class=whites_col>
-                <h2 class=white_header>White Label Solutions and Turnkey</h2>
-                <p class=white_para>As a white label provider, VRNL empowers your business to offer a diverse range of
-                    products and services under your brand name. This approach allows you to expand your offerings
-                    quickly and efficiently, giving your customers a seamless experience of <a href="/"><span
-                            class=white_change><a routerLink="/sports-betting-software" class=white_change>sports
-                                betting software</a></span></a>.</p>
-                <p class=white_para>VRNL's white label solutions are not only a time-saver but also a cost-effective way
-                    to grow your business without the burden of developing products from scratch. This strategic move
-                    can significantly boost your profitability with<span class=white_change><a
-                            routerLink="/white-label-betting-platform" class=white_change> white label
-                            exchange</a></span>.</p>
+                <h2 class=white_header>White Label Solutions and Turnkey Platforms</h2>
+                <p class=white_para>VRNL’s white-label solutions enable your business to rapidly broaden its product
+                    range under your own brand, delivering a
+                    <span class=white_change> seamless and engaging sports betting experience </span> to your
+                    customers. This approach eliminates the need for costly and time-consuming development, allowing you
+                    to focus on growth and <a href="/"><span class=white_change><a routerLink="/sports-betting-software"
+                                class=white_change>customer satisfaction</a></span></a>.
+                </p>
+                <p class=white_para>Our secure, high-performance betting platform is fully certified by independent
+                    gaming laboratories, guaranteeing compliance and reliability. By partnering with VRNL, you gain
+                    access to a trusted betting exchange that boosts profitability while ensuring the
+
+                    <span class=white_change><a routerLink="/white-label-betting-platform" class=white_change>highest
+                            industry
+                            standards</a></span>.
+                </p>
+                <!-- 
                 <p class=white_para>In either scenario, we provide a comprehensive, high-performing and secure betting
-                    platform certified by independent gaming laboratories.</p><br><br>
+                    platform certified by independent gaming laboratories.</p> -->
+
+
+                <br><br>
                 <div class=white_back></div>
             </div>
             <div class=whites_col_1><img class=whites_sec_img2 src="assets/Sports Betting Softwares1.webp" loading=lazy
@@ -69,12 +109,12 @@
                     height=325 alt="iGaming Platform"></div>
             <div class=gaming_col_2>
                 <h2 class=gaming_header>iGaming Platform</h2>
-                <p class=gaming_para>VRNL is a trusted partner in the world of iGaming. As a leading provider of <span
+                <p class=gaming_para>VRNL is a reliable partner in the iGaming industry, offering industry-leading <span
                         class=white_change> <a routerLink="/casino" class=white_change>white label casino </a></span>
                     and <span class=white_change><a routerLink="/sports-betting-software" class=white_change>sports
-                            betting software </a></span>, we are dedicated to revolutionizing the online gaming
-                    experience. Our mission is simple: to empower gaming operators with a versatile and cutting-edge
-                    platform that delivers seamless and engaging gameplay to their players.</p><br><br>
+                            betting software </a></span>, Our goal is to transform the online gaming landscape by
+                    providing operators with a versatile, state-of-the-art platform that ensures seamless, engaging
+                    gameplay for their users.</p><br><br>
                 <div class=white_back></div>
             </div>
         </div>
@@ -83,11 +123,10 @@
         <div class=casino_row>
             <div class=casino_col>
                 <h2 class=casino_header>Online Casino</h2>
-                <p class=casino_para>Welcome to VRNL Online Casino, where excitement, entertainment and winning
-                    opportunities collide. As a leading name in the online casino industry, we take pride in offering a
-                    thrilling and secure gaming platform for players worldwide. Our mission is simple: to provide an
-                    unmatched online casino experience that keeps you coming back for more. Our <span class=white_change
-                        routerLink="/online-casino-software">online casino software</span> is user-friendly.</p>
+                <p class=casino_para>Welcome to VRNL Online Casino — <b>a trusted leader</b> delivering a secure and
+                    thrilling
+                    gaming platform globally. Our mission is to provide an exceptional casino experience that keeps
+                    players engaged and entertained.</p>
                 <ul class=casino_list>
                     <li>Over 75 providers</li>
                     <li>Exceeding 15,000 slot machines</li>
@@ -95,8 +134,8 @@
                     <li>700+ video poker games</li>
                     <li>More than 200 other games</li>
                 </ul>
-                <p class=casino_para>Our expert team is at your service throughout all phases, from initial training to
-                    the commencement of production.</p><br><br>
+                <p class=casino_para>Our expert team supports you throughout every stage, from training to launch.</p>
+                <br><br>
                 <div class=white_back></div>
             </div>
             <div class=casino_col_2><img class=casino_sec_img2 src="assets/vrnl online c_11zon (1).webp" loading=lazy
@@ -119,7 +158,7 @@
                     <li>Live Blackjack</li>
                     <li>Baccarat Live</li>
                     <li>Casino Hold’em Live</li>
-                    <li>Supernova</li>
+                    <li>Blueocean</li>
                     <li>Dragon Tiger Live</li>
                     <li>Andar Bahar</li>
                     <li>Teen Patti</li>
@@ -134,18 +173,20 @@
                     class=integration_col_img alt="Integration with other platforms"></div>
             <div class=integration_col_1>
                 <h2 class=integration_header>API Service Providers and iFrame</h2>
-                <p class=integration_para>At VRNL, we take pride in being a leading API service provider and iFrame
-                    solutions specialist. We offer innovative and reliable services to businesses of all sizes, helping
-                    them streamline their processes, enhance user experiences and achieve their digital goals.</p>
-                <p class=integration_para>At VRNL, we understand the importance of seamless data exchange and
+                <p class=integration_para>VRNL delivers cutting-edge <b> API integration and iFrame solutions </b>, enabling
+                    seamless platform connectivity, secure data exchange, and enhanced user experiences — helping
+                    businesses operate smarter and faster.</p>
+                <!-- <p class=integration_para>At VRNL, we understand the importance of seamless data exchange and
                     communication between applications. We provide top-notch API integration services, allowing your
                     software to interact effortlessly with other platforms. Our experts will ensure that your systems
-                    function harmoniously, providing a smooth experience for both you and your customers.</p><br><br>
+                    function harmoniously, providing a smooth experience for both you and your customers.</p> -->
+                    
+                    <br>
                 <div class=white_back></div>
             </div>
         </div>
     </section>
-    <section class=integration_sec>
+    <!-- <section class=integration_sec>
         <div class=integration_row>
             <div class=integration_col>
                 <h2 class=virtual_header>Virtual Games</h2>
@@ -163,12 +204,12 @@
             <div class=integration_col_1><img class=virtual_img src="assets/Virtual Games Image1.webp" loading=lazy
                     alt="virtual games provider"></div>
         </div>
-    </section>
+    </section> -->
     <section class=starting_sec>
         <div class=starting_row>
             <div class=start_details>
-                <h2 class=start_header>Before you start, see it in action!</h2>
-                <p class=start_para>Explore our demo platform:</p><a href="https://www.lc247.co/" target=_blank
+                <h2 class=start_header>Before you begin, explore it in action!</h2>
+                <p class=start_para>on our demo platform:</p><a href="https://www.lc247.co/" target=_blank
                     style=color:#a0c528>
                     <p class=start_a> https://www.lc247.co/ </p>
                 </a>
